Logs/log_2021 04 03 16.55.38.txt
2021-04-03 16:55:38,233 - 
Downloading Utility Log. 
Log started.

Move log to Impt Logs if required as only the 10 most recent logs are kept.

2021-04-03 16:55:43,019 - Command: dl -youtube https://www.youtube.com/channel/UCZIfhUoFkVPphEtnaZaGDqg
2021-04-03 16:55:43,019 - youtube link
2021-04-03 16:55:43,023 - invalid syntax (youtube.py, line 171)
Traceback (most recent call last):
  File "C:\Utilities\Scripts\url-dl-v2\main.py", line 241, in <module>
    parse_input()
  File "C:\Utilities\Scripts\url-dl-v2\main.py", line 121, in parse_input
    from extractors.youtube import youtube_extractor
  File "C:\Utilities\Scripts\url-dl-v2\extractors\youtube.py", line 171
    continue:
            ^
SyntaxError: invalid syntax
2021-04-03 16:55:43,023 - 
Log Ended.
Total time: 0 hrs 0 min 4.79 sec

